# vikunja-cli

./: .gitignore  AGENTS.md  README.md  SKILL.md  openapi.json  openapi3.json  pyproject.toml  vk
scripts/: migrate_taskwarrior.py
vikunja_cli/: __init__.py  client.py  config.py  formatters.py  main.py
vikunja_cli/commands/: auth.py  projects.py  tasks.py
vikunja_client/: __init__.py
vikunja_client/api/api/: delete_tokens_token_id.py  get_routes.py  get_tokens.py  put_tokens.py
vikunja_client/api/assignees/: get_tasks_task_id_assignees.py  (+3 more)
vikunja_client/models/: __init__.py  auth_token.py  background_image.py  code_vikunja_io_api_pkg_modules_auth_openid_provider.py  files_file.py  handler_auth_url.py  microsofttodo_migration.py  migration_status.py  models_api_permissions.py  models_api_token.py  models_api_token_route.py  models_bucket.py  models_bulk_assignees.py  models_bulk_task.py  models_database_notifications.py  models_label.py  models_label_task.py  models_label_task_bulk.py  models_link_sharing.py  models_message.py  models_permission.py  models_project.py  models_project_duplicate.py  models_project_user.py  models_project_view.py  models_project_view_bucket_configuration.py  models_project_view_bucket_configuration_mode.py  models_project_view_view_kind.py  models_reaction.py  models_reaction_map.py  models_related_task_map.py  models_relation_kind.py  models_reminder_relation.py  models_route_detail.py  models_saved_filter.py  models_sharing_type.py  models_subscription.py  models_task.py  models_task_assginee.py  models_task_attachment.py  (+51 more)
(+145 files in other folders)
