[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vikunja-cli"
version = "0.1.0"
description = "A CLI for Vikunja task management"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "attrs>=23",
    "pydantic>=2",
]

[project.scripts]
vk = "vikunja_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["vikunja_cli", "vikunja_client"]

[dependency-groups]
dev = [
    "openapi-python-client>=0.21",
]
